# spin-trigger-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.standalone.toml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  spin-pluginify.toml  test-simple-example.md
docs/: development.md  getting-started.md
examples/demo-mcp/: .gitignore  Cargo.toml  README.md  spin.toml
examples/demo-mcp/wit/: world.wit
examples/mcp-weather-tool/: Cargo.toml  spin.toml
examples/mcp-weather-tool/src/: lib.rs
examples/mcp-weather-tool/wit/: world.wit
sdk/: Cargo.toml
sdk/macro/: Cargo.toml
sdk/macro/src/: lib.rs
sdk/src/: lib.rs
src/: lib.rs  main.rs
templates/: spin-templates.toml
templates/mcp-rust/content/: Cargo.toml.tmpl  spin.toml
templates/mcp-rust/content/src/: lib.rs
templates/mcp-rust/metadata/: spin-template.toml
templates/templates/mcp-rust/content/: Cargo.toml.tmpl
templates/templates/mcp-rust/content/src/: lib.rs  mod.rs  prompts.rs  resources.rs  tools.rs
templates/templates/mcp-rust/metadata/: spin-template.toml
templates/templates/mcp-rust/metadata/snippets/: component.txt
templates/templates/toolkit-pointer/content/: Cargo.toml.tmpl  spin.toml
templates/templates/toolkit-pointer/content/wit/: spin-mcp.wit  world.wit
templates/templates/toolkit-pointer/metadata/: spin-template.toml
templates/templates/toolkit-pointer/metadata/snippets/: component.txt
