[package]
name = "trigger-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
anyhow = "1.0.68"
base64 = "0.22"
clap = { version = "3.1.15", features = ["derive", "env"] }
futures = "0.3.25"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
spin-app = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-core = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-expressions = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factors = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-runtime-factors = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-trigger = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-telemetry = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factor-variables = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
wasmtime = { version = "33.0.0" }

[workspace]
members = ["sdk", "sdk/macro"]

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
wit-bindgen = "0.16.0"