[package]
name = "spin-mcp-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Spin MCP Plugin Authors"]
license = "Apache-2.0"
description = "SDK for Spin MCP trigger components"
include = ["../spin-mcp.wit"]

[lib]
crate-type = ["rlib"]

[dependencies]
spin-mcp-macro = { path = "macro" }
wit-bindgen = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
