[package]
name = "demo-mcp"
authors = ["bowlofarugula <bowlofarugula@gmail.com>"]
description = "An MCP server component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
serde_json = "1.0"
spin-mcp-sdk = { git = "https://github.com/fastertools/spin-trigger-mcp" }

[workspace]